--- a/index.html
+++ b/index.html
@@ -11,26 +11,35 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--шапка-->
     <header class="page">
-      <nav class="page-nav">
-        <a class="page-nav-logo link" href="./index.html"
-          ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
-        >
-        <ul class="page-nav-list list">
-          <li><a class="link current" href="./index.html">Студия</a></li>
-          <li><a class="link" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="page-nav">
+          <a class="page-nav-logo link" href="./index.html"
+            ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
+          >
+          <ul class="page-nav-list list">
+            <li><a class="link current" href="./index.html">Студия</a></li>
+            <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="link" href="">Контакты</a></li>
+          </ul>
+        </nav>
 
-      <ul class="contacts list">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+        <ul class="contacts list">
+          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
     </header>
     <main>
       <!--секция герой-->
@@ -41,64 +50,70 @@
 
       <!--наши приемущества-->
       <section class="advantages">
-        <h2 class="advantages-title visually-hidden">наши приемущества</h2>
-        <ul class="advantages-list list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="advantages-title visually-hidden">наши приемущества</h2>
+          <ul class="advantages-list list">
+            <li>
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Чем мы занимаемся -->
       <section class="possibilities">
-        <h2 class="possibilities-title title">Чем мы занимаемся</h2>
-        <ul class="possibilities-list list">
-          <li>
-            <img src="images/box1.jpg" width="370" alt="монитор с изображением кода страницы" />
-          </li>
-          <li><img src="images/box2.jpg" width="370" alt="смартфон и ноутбук" /></li>
-          <li><img src="images/box3.jpg" width="370" alt="планшет в руке" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="possibilities-title title">Чем мы занимаемся</h2>
+          <ul class="possibilities-list list">
+            <li>
+              <img src="images/box1.jpg" width="370" alt="монитор с изображением кода страницы" />
+            </li>
+            <li><img src="images/box2.jpg" width="370" alt="смартфон и ноутбук" /></li>
+            <li><img src="images/box3.jpg" width="370" alt="планшет в руке" /></li>
+          </ul>
+        </div>
       </section>
       <!-- наша команда -->
       <section class="team">
-        <h2 class="team-title title">Наша команда</h2>
-        <ul class="team-list list">
-          <li>
-            <img src="images/img1.jpg" width="270" alt="фото члена команды" />
-            <h3 class="title">Игорь Демьяненко</h3>
-            <p class="profession">Product Designer</p>
-          </li>
-          <li>
-            <img src="images/img2.jpg" width="270" alt="фото члена команды" />
-            <h3 class="title">Ольга Репина</h3>
-            <p class="profession">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="images/img3.jpg" width="270" alt="фото члена команды" />
-            <h3 class="title">Николай Тарасов</h3>
-            <p class="profession">Marketing</p>
-          </li>
-          <li>
-            <img src="images/img4.jpg" width="270" alt="фото члена команды" />
-            <h3 class="title">Михаил Ермаков</h3>
-            <p class="profession">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title title">Наша команда</h2>
+          <ul class="team-list list">
+            <li>
+              <img src="images/img1.jpg" width="270" alt="фото члена команды" />
+              <h3 class="title">Игорь Демьяненко</h3>
+              <p class="profession">Product Designer</p>
+            </li>
+            <li>
+              <img src="images/img2.jpg" width="270" alt="фото члена команды" />
+              <h3 class="title">Ольга Репина</h3>
+              <p class="profession">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="images/img3.jpg" width="270" alt="фото члена команды" />
+              <h3 class="title">Николай Тарасов</h3>
+              <p class="profession">Marketing</p>
+            </li>
+            <li>
+              <img src="images/img4.jpg" width="270" alt="фото члена команды" />
+              <h3 class="title">Михаил Ермаков</h3>
+              <p class="profession">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Футер -->
