--- a/portfolio.html
+++ b/portfolio.html
@@ -11,104 +11,120 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--шапка-->
     <header class="page">
-      <nav class="page-nav">
-        <a class="page-nav-logo link" href="./index.html"
-          ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
-        >
-        <ul class="page-nav-list list">
-          <li><a class="link" href="./index.html">Студия</a></li>
-          <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-          <li><a class="link" href="">Контакты</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav class="page-nav">
+          <a class="page-nav-logo link" href="./index.html"
+            ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
+          >
+          <ul class="page-nav-list list">
+            <li><a class="link" href="./index.html">Студия</a></li>
+            <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="link" href="">Контакты</a></li>
+          </ul>
+        </nav>
 
-      <ul class="contacts list">
-        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+        <ul class="contacts list">
+          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
     </header>
     <main>
       <section class="portfolio">
-        <h1 class="portfolio-title visually-hidden">Портфолио</h1>
-        <ul class="portfolio-filter list">
-          <li><button class="button" type="button">Все</button></li>
-          <li><button class="button" type="button">Веб-сайты</button></li>
-          <li><button class="button" type="button">Приложения</button></li>
-          <li><button class="button" type="button">Дизайн</button></li>
-          <li><button class="button" type="button">Маркетинг</button></li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li>
-            <img src="./images/img-portfolio.jpg" width="370" height="294" alt="ноутбук" />
-            <h2 class="title">Технокряк</h2>
-            <p class="description">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio2.jpg"
-              width="370"
-              height="294"
-              alt="два баскетболиста"
-            />
-            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-            <p class="description">Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio3.jpg"
-              width="370"
-              height="294"
-              alt="логотип ресторана"
-            />
-            <h2 class="title">Ресторан Seafood</h2>
-            <p class="description">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/img-portfolio4.jpg" width="370" height="294" alt="наушники" />
-            <h2 class="title">Проект Prime</h2>
-            <p class="description">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/img-portfolio5.jpg" width="370" height="294" alt="две коробки" />
-            <h2 class="title">Проект Boxes</h2>
-            <p class="description">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/img-portfolio6.jpg" width="370" height="294" alt="монитор" />
-            <h2 class="title">Inspiration has no Borders</h2>
-            <p class="description">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio7.jpg"
-              width="370"
-              height="294"
-              alt="развернутая книга"
-            />
-            <h2 class="title">Издание Limited Edition</h2>
-            <p class="description">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/img-portfolio8.jpg" width="370" height="294" alt="бумажный ярлык" />
-            <h2 class="title">Проект LAB</h2>
-            <p class="description">Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-portfolio9.jpg"
-              width="370"
-              height="294"
-              alt="руки на клавиатуре ноутбука"
-            />
-            <h2 class="title">Growing Business</h2>
-            <p class="description">Приложение</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="portfolio-title visually-hidden">Портфолио</h1>
+          <ul class="portfolio-filter list">
+            <li><button class="button" type="button">Все</button></li>
+            <li><button class="button" type="button">Веб-сайты</button></li>
+            <li><button class="button" type="button">Приложения</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li>
+              <img src="./images/img-portfolio.jpg" width="370" height="294" alt="ноутбук" />
+              <h2 class="title">Технокряк</h2>
+              <p class="description">Веб-сайт</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio2.jpg"
+                width="370"
+                height="294"
+                alt="два баскетболиста"
+              />
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p class="description">Дизайн</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio3.jpg"
+                width="370"
+                height="294"
+                alt="логотип ресторана"
+              />
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="description">Приложение</p>
+            </li>
+            <li>
+              <img src="./images/img-portfolio4.jpg" width="370" height="294" alt="наушники" />
+              <h2 class="title">Проект Prime</h2>
+              <p class="description">Маркетинг</p>
+            </li>
+            <li>
+              <img src="./images/img-portfolio5.jpg" width="370" height="294" alt="две коробки" />
+              <h2 class="title">Проект Boxes</h2>
+              <p class="description">Приложение</p>
+            </li>
+            <li>
+              <img src="./images/img-portfolio6.jpg" width="370" height="294" alt="монитор" />
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="description">Веб-сайт</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio7.jpg"
+                width="370"
+                height="294"
+                alt="развернутая книга"
+              />
+              <h2 class="title">Издание Limited Edition</h2>
+              <p class="description">Дизайн</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio8.jpg"
+                width="370"
+                height="294"
+                alt="бумажный ярлык"
+              />
+              <h2 class="title">Проект LAB</h2>
+              <p class="description">Маркетинг</p>
+            </li>
+            <li>
+              <img
+                src="./images/img-portfolio9.jpg"
+                width="370"
+                height="294"
+                alt="руки на клавиатуре ноутбука"
+              />
+              <h2 class="title">Growing Business</h2>
+              <p class="description">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Футер -->
