добавляет геометрию в футере и под фильтром

--- a/index.html
+++ b/index.html
@@ -118,16 +118,18 @@
     </main>
     <!-- Футер -->
     <footer>
-      <a class="page-nav-logo link" href="./index.html"
-        ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
-      >
-      <address class="page-address">
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="page-address-list list">
-          <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-          <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="page-nav-logo link" href="./index.html"
+          ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
+        >
+        <address class="page-address">
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="page-address-list list">
+            <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+            <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
