--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     </header>
     <main>
       <!--секция герой-->
-      <section class="hero">
+      <section class="hero section">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
       <!--наши приемущества-->
-      <section class="advantages">
+      <section class="advantages section">
         <div class="container">
           <h2 class="advantages-title visually-hidden">наши приемущества</h2>
           <ul class="advantages-list list">
@@ -75,7 +75,7 @@
         </div>
       </section>
       <!-- Чем мы занимаемся -->
-      <section class="possibilities">
+      <section class="possibilities section">
         <div class="container">
           <h2 class="possibilities-title title">Чем мы занимаемся</h2>
           <ul class="possibilities-list list">
@@ -88,7 +88,7 @@
         </div>
       </section>
       <!-- наша команда -->
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title title">Наша команда</h2>
           <ul class="team-list list">
