--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
       </div>
     </header>
     <main>
-      <section class="portfolio">
+      <section class="portfolio section">
         <div class="container">
           <h1 class="portfolio-title visually-hidden">Портфолио</h1>
           <div class="filters">
