--- a/index.html
+++ b/index.html
@@ -55,22 +55,28 @@
         <div class="container">
           <h2 class="advantages-title visually-hidden">наши приемущества</h2>
           <ul class="advantages-list list">
-            <li>
+            <li class="item">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
               </p>
             </li>
           </ul>
@@ -81,11 +87,11 @@
         <div class="container">
           <h2 class="possibilities-title title">Чем мы занимаемся</h2>
           <ul class="possibilities-list list">
-            <li>
+            <li class="item">
               <img src="images/box1.jpg" width="370" alt="монитор с изображением кода страницы" />
             </li>
-            <li><img src="images/box2.jpg" width="370" alt="смартфон и ноутбук" /></li>
-            <li><img src="images/box3.jpg" width="370" alt="планшет в руке" /></li>
+            <li class="item"><img src="images/box2.jpg" width="370" alt="смартфон и ноутбук" /></li>
+            <li class="item"><img src="images/box3.jpg" width="370" alt="планшет в руке" /></li>
           </ul>
         </div>
       </section>
@@ -94,22 +100,22 @@
         <div class="container">
           <h2 class="team-title title">Наша команда</h2>
           <ul class="team-list list">
-            <li>
+            <li class="item">
               <img src="images/img1.jpg" width="270" alt="фото члена команды" />
               <h3 class="title">Игорь Демьяненко</h3>
               <p class="profession">Product Designer</p>
             </li>
-            <li>
+            <li class="item">
               <img src="images/img2.jpg" width="270" alt="фото члена команды" />
               <h3 class="title">Ольга Репина</h3>
               <p class="profession">Frontend Developer</p>
             </li>
-            <li>
+            <li class="item">
               <img src="images/img3.jpg" width="270" alt="фото члена команды" />
               <h3 class="title">Николай Тарасов</h3>
               <p class="profession">Marketing</p>
             </li>
-            <li>
+            <li class="item">
               <img src="images/img4.jpg" width="270" alt="фото члена команды" />
               <h3 class="title">Михаил Ермаков</h3>
               <p class="profession">UI Designer</p>
