--- a/portfolio.html
+++ b/portfolio.html
@@ -29,15 +29,17 @@
             ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
           >
           <ul class="page-nav-list list">
-            <li><a class="link" href="./index.html">Студия</a></li>
-            <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="link" href="">Контакты</a></li>
+            <li class="item"><a class="link current" href="./index.html">Студия</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li class="item"><a class="link" href="">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="contacts list">
-          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -47,20 +49,20 @@
           <h1 class="portfolio-title visually-hidden">Портфолио</h1>
           <div class="filters">
             <ul class="portfolio-filter list">
-              <li><button class="button" type="button">Все</button></li>
-              <li><button class="button" type="button">Веб-сайты</button></li>
-              <li><button class="button" type="button">Приложения</button></li>
-              <li><button class="button" type="button">Дизайн</button></li>
-              <li><button class="button" type="button">Маркетинг</button></li>
+              <li class="item"><button class="button" type="button">Все</button></li>
+              <li class="item"><button class="button" type="button">Веб-сайты</button></li>
+              <li class="item"><button class="button" type="button">Приложения</button></li>
+              <li class="item"><button class="button" type="button">Дизайн</button></li>
+              <li class="item"><button class="button" type="button">Маркетинг</button></li>
             </ul>
           </div>
           <ul class="portfolio-list list">
-            <li>
+            <li class="item">
               <img src="./images/img-portfolio.jpg" width="370" height="294" alt="ноутбук" />
               <h2 class="title">Технокряк</h2>
               <p class="description">Веб-сайт</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/img-portfolio2.jpg"
                 width="370"
@@ -70,7 +72,7 @@
               <h2 class="title">Постер New Orlean vs Golden Star</h2>
               <p class="description">Дизайн</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/img-portfolio3.jpg"
                 width="370"
@@ -80,22 +82,22 @@
               <h2 class="title">Ресторан Seafood</h2>
               <p class="description">Приложение</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/img-portfolio4.jpg" width="370" height="294" alt="наушники" />
               <h2 class="title">Проект Prime</h2>
               <p class="description">Маркетинг</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/img-portfolio5.jpg" width="370" height="294" alt="две коробки" />
               <h2 class="title">Проект Boxes</h2>
               <p class="description">Приложение</p>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/img-portfolio6.jpg" width="370" height="294" alt="монитор" />
               <h2 class="title">Inspiration has no Borders</h2>
               <p class="description">Веб-сайт</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/img-portfolio7.jpg"
                 width="370"
@@ -105,7 +107,7 @@
               <h2 class="title">Издание Limited Edition</h2>
               <p class="description">Дизайн</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/img-portfolio8.jpg"
                 width="370"
@@ -115,7 +117,7 @@
               <h2 class="title">Проект LAB</h2>
               <p class="description">Маркетинг</p>
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/img-portfolio9.jpg"
                 width="370"
