--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,10 @@
           <ul class="portfolio-list list">
             <li class="item">
               <img src="./images/img-portfolio.jpg" width="370" height="294" alt="ноутбук" />
-              <h2 class="title">Технокряк</h2>
-              <p class="description">Веб-сайт</p>
+              <div class="bottom-part">
+                <h2 class="title">Технокряк</h2>
+                <p class="description">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -69,8 +71,10 @@
                 height="294"
                 alt="два баскетболиста"
               />
-              <h2 class="title">Постер New Orlean vs Golden Star</h2>
-              <p class="description">Дизайн</p>
+              <div class="bottom-part">
+                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                <p class="description">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -79,23 +83,31 @@
                 height="294"
                 alt="логотип ресторана"
               />
-              <h2 class="title">Ресторан Seafood</h2>
-              <p class="description">Приложение</p>
+              <div class="bottom-part">
+                <h2 class="title">Ресторан Seafood</h2>
+                <p class="description">Приложение</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/img-portfolio4.jpg" width="370" height="294" alt="наушники" />
-              <h2 class="title">Проект Prime</h2>
-              <p class="description">Маркетинг</p>
+              <div class="bottom-part">
+                <h2 class="title">Проект Prime</h2>
+                <p class="description">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/img-portfolio5.jpg" width="370" height="294" alt="две коробки" />
-              <h2 class="title">Проект Boxes</h2>
-              <p class="description">Приложение</p>
+              <div class="bottom-part">
+                <h2 class="title">Проект Boxes</h2>
+                <p class="description">Приложение</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/img-portfolio6.jpg" width="370" height="294" alt="монитор" />
-              <h2 class="title">Inspiration has no Borders</h2>
-              <p class="description">Веб-сайт</p>
+              <div class="bottom-part">
+                <h2 class="title">Inspiration has no Borders</h2>
+                <p class="description">Веб-сайт</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -104,8 +116,10 @@
                 height="294"
                 alt="развернутая книга"
               />
-              <h2 class="title">Издание Limited Edition</h2>
-              <p class="description">Дизайн</p>
+              <div class="bottom-part">
+                <h2 class="title">Издание Limited Edition</h2>
+                <p class="description">Дизайн</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -114,8 +128,10 @@
                 height="294"
                 alt="бумажный ярлык"
               />
-              <h2 class="title">Проект LAB</h2>
-              <p class="description">Маркетинг</p>
+              <div class="bottom-part">
+                <h2 class="title">Проект LAB</h2>
+                <p class="description">Маркетинг</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -124,8 +140,10 @@
                 height="294"
                 alt="руки на клавиатуре ноутбука"
               />
-              <h2 class="title">Growing Business</h2>
-              <p class="description">Приложение</p>
+              <div class="bottom-part">
+                <h2 class="title">Growing Business</h2>
+                <p class="description">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
