--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <main>
       <!--секция герой-->
-      <section class="hero section">
+      <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
@@ -102,39 +102,49 @@
           <ul class="team-list list">
             <li class="item">
               <img src="images/img1.jpg" width="270" alt="фото члена команды" />
-              <h3 class="title">Игорь Демьяненко</h3>
-              <p class="profession">Product Designer</p>
+              <div class="card-bottom">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p class="profession">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img src="images/img2.jpg" width="270" alt="фото члена команды" />
-              <h3 class="title">Ольга Репина</h3>
-              <p class="profession">Frontend Developer</p>
+              <div class="card-bottom">
+                <h3 class="title">Ольга Репина</h3>
+                <p class="profession">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img src="images/img3.jpg" width="270" alt="фото члена команды" />
-              <h3 class="title">Николай Тарасов</h3>
-              <p class="profession">Marketing</p>
+              <div class="card-bottom">
+                <h3 class="title">Николай Тарасов</h3>
+                <p class="profession">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img src="images/img4.jpg" width="270" alt="фото члена команды" />
-              <h3 class="title">Михаил Ермаков</h3>
-              <p class="profession">UI Designer</p>
+              <div class="card-bottom">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p class="profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- Футер -->
-    <footer>
+    <footer class="footer">
       <div class="container">
         <a class="page-nav-logo link" href="./index.html"
           ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
         >
         <address class="page-address">
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="page-address-list list">
-            <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li class="item">
+              <a class="link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="item"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
       </div>
