--- a/portfolio.html
+++ b/portfolio.html
@@ -47,15 +47,13 @@
       <section class="portfolio section">
         <div class="container">
           <h1 class="portfolio-title visually-hidden">Портфолио</h1>
-          <div class="filters">
-            <ul class="portfolio-filter list">
-              <li class="item"><button class="button" type="button">Все</button></li>
-              <li class="item"><button class="button" type="button">Веб-сайты</button></li>
-              <li class="item"><button class="button" type="button">Приложения</button></li>
-              <li class="item"><button class="button" type="button">Дизайн</button></li>
-              <li class="item"><button class="button" type="button">Маркетинг</button></li>
-            </ul>
-          </div>
+          <ul class="portfolio-filter list">
+            <li class="item"><button class="button" type="button">Все</button></li>
+            <li class="item"><button class="button" type="button">Веб-сайты</button></li>
+            <li class="item"><button class="button" type="button">Приложения</button></li>
+            <li class="item"><button class="button" type="button">Дизайн</button></li>
+            <li class="item"><button class="button" type="button">Маркетинг</button></li>
+          </ul>
           <ul class="portfolio-list list">
             <li class="item">
               <img src="./images/img-portfolio.jpg" width="370" height="294" alt="ноутбук" />
@@ -150,16 +148,18 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer>
+    <footer class="footer">
       <div class="container">
         <a class="page-nav-logo link" href="./index.html"
           ><span class="first-part-logo">Web</span><span class="second-part-logo">Studio</span></a
         >
         <address class="page-address">
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
+          <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="page-address-list list">
-            <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li class="item">
+              <a class="link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="item"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
       </div>
